Remove media query

--- a/css/site.css
+++ b/css/site.css
@@ -117,10 +117,11 @@ ul {
   margin: 1em;
 }
 
+/*
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
   .duplex {
     display: block;
  
   }
 }
-
+*/
